feat: render HTML homepage from template

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>🚀 Hey!!! Welcome to My first Dockerized app, which is now HTML powered!Get ready for so interesting updates.⚡️ 🥁</h1>
+  <h1>🚀 Hey!!! Welcome to My first Dockerized app, which is now HTML powered!Get ready for some interesting updates.#MAJORSALUTE 🫡 ⚡️ 🥁</h1>
   <p>Built with 🐍 Flask + 🐳 Docker + ☁️ Render</p>
 </body>
 </html>
