chore: update page title to Joey

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Alaps Docker App</title>
+  <title>Joeys Docker App</title>
   <style>
     body {
       background: #111;
